Update lists at 20250426-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -86,6 +86,16 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:666::1;
+allow 2001:67c:89c:702:1ce:1ce:babe:1;
+allow 2001:67c:89c:702:1ce:1ce:babe:10;
+allow 2001:67c:89c:702:1ce:1ce:babe:2;
+allow 2001:67c:89c:702:1ce:1ce:babe:3;
+allow 2001:67c:89c:702:1ce:1ce:babe:4;
+allow 2001:67c:89c:702:1ce:1ce:babe:5;
+allow 2001:67c:89c:702:1ce:1ce:babe:6;
+allow 2001:67c:89c:702:1ce:1ce:babe:7;
+allow 2001:67c:89c:702:1ce:1ce:babe:8;
+allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
@@ -390,6 +400,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
