--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,6 +116,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 1.168.180.2;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -274,7 +275,17 @@ allow 185.113.128.30;
 allow 185.113.8.186;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.129.61.1;
+allow 185.129.61.10;
 allow 185.129.61.129;
+allow 185.129.61.2;
+allow 185.129.61.3;
+allow 185.129.61.4;
+allow 185.129.61.5;
+allow 185.129.61.6;
+allow 185.129.61.7;
+allow 185.129.61.8;
+allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.43;
@@ -511,7 +522,6 @@ allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
-allow 185.247.226.175;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -778,6 +788,16 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:666::1;
+allow 2001:67c:89c:702:1ce:1ce:babe:1;
+allow 2001:67c:89c:702:1ce:1ce:babe:10;
+allow 2001:67c:89c:702:1ce:1ce:babe:2;
+allow 2001:67c:89c:702:1ce:1ce:babe:3;
+allow 2001:67c:89c:702:1ce:1ce:babe:4;
+allow 2001:67c:89c:702:1ce:1ce:babe:5;
+allow 2001:67c:89c:702:1ce:1ce:babe:6;
+allow 2001:67c:89c:702:1ce:1ce:babe:7;
+allow 2001:67c:89c:702:1ce:1ce:babe:8;
+allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
@@ -1277,6 +1297,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1781,6 +1802,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1938,6 +1960,7 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 96.66.15.152;
 allow 98.128.173.33;
