--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -116,6 +116,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 1.168.180.2;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -274,7 +275,17 @@ deny 185.113.128.30;
 deny 185.113.8.186;
 deny 185.120.16.171;
 deny 185.120.16.176;
+deny 185.129.61.1;
+deny 185.129.61.10;
 deny 185.129.61.129;
+deny 185.129.61.2;
+deny 185.129.61.3;
+deny 185.129.61.4;
+deny 185.129.61.5;
+deny 185.129.61.6;
+deny 185.129.61.7;
+deny 185.129.61.8;
+deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.44.43;
@@ -511,7 +522,6 @@ deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
 deny 185.247.184.33;
-deny 185.247.226.175;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
@@ -778,6 +788,16 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
 deny 2001:67c:89c:666::1;
+deny 2001:67c:89c:702:1ce:1ce:babe:1;
+deny 2001:67c:89c:702:1ce:1ce:babe:10;
+deny 2001:67c:89c:702:1ce:1ce:babe:2;
+deny 2001:67c:89c:702:1ce:1ce:babe:3;
+deny 2001:67c:89c:702:1ce:1ce:babe:4;
+deny 2001:67c:89c:702:1ce:1ce:babe:5;
+deny 2001:67c:89c:702:1ce:1ce:babe:6;
+deny 2001:67c:89c:702:1ce:1ce:babe:7;
+deny 2001:67c:89c:702:1ce:1ce:babe:8;
+deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:67c:e28:1::100;
 deny 2001:67c:e28:1::101;
 deny 2001:67c:e28:1::102;
@@ -1277,6 +1297,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1781,6 +1802,7 @@ deny 51.81.222.62;
 deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1938,6 +1960,7 @@ deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.211.174.137;
+deny 95.211.244.28;
 deny 95.216.107.148;
 deny 96.66.15.152;
 deny 98.128.173.33;
