--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,6 +99,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.172.84.107;
 allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -116,7 +117,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.185.56;
+allow 1.170.215.211;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -137,6 +138,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 140.99.243.234;
 allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -214,6 +216,7 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
 allow 176.65.149.105;
@@ -235,7 +238,6 @@ allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
-allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.35.0.216;
@@ -970,7 +972,12 @@ allow 23.153.248.34;
 allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.2;
+allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -985,6 +992,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2406:ef80:4:2881::ccd5:a26;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1520,6 +1528,7 @@ allow 2a0d:8140:1fff:395e::1;
 allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:8140:1fff:fe40::1;
 allow 2a0d:bbc7:0:1::10a;
+allow 2a0d:bbc7:0:1::132;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::2ef;
@@ -1548,7 +1557,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
-allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:14::24a8;
@@ -1616,6 +1624,7 @@ allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
+allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
@@ -1647,6 +1656,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1657,7 +1667,6 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1692,6 +1701,7 @@ allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
+allow 45.141.215.133;
 allow 45.141.215.136;
 allow 45.141.215.167;
 allow 45.141.215.169;
@@ -1712,7 +1722,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
-allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1739,6 +1748,7 @@ allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
 allow 45.84.107.172;
+allow 45.84.107.174;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.222;
