--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -119,6 +119,7 @@ deny 2401:c080:1c02:2d4::;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
+deny 2406:ef80:4:2881::ccd5:a26;
 deny 2407:3640:2207:8882::1;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -647,6 +648,7 @@ deny 2a0d:8140:1fff:395e::1;
 deny 2a0d:8140:1fff:62f9::1;
 deny 2a0d:8140:1fff:fe40::1;
 deny 2a0d:bbc7:0:1::10a;
+deny 2a0d:bbc7:0:1::132;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::2ef;
@@ -675,7 +677,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
-deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:13::67bc;
 deny 2a0e:bfc0:0:14::24a8;
@@ -743,6 +744,7 @@ deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
+deny 2a12:a800:2:1:45:141:215:133;
 deny 2a12:a800:2:1:45:141:215:167;
 deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
