--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,7 +99,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.172.84.107;
 allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -117,7 +116,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.215.211;
+allow 1.170.204.68;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -138,7 +137,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 140.99.243.234;
 allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -992,7 +990,6 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2406:ef80:4:2881::ccd5:a26;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1215,7 +1212,7 @@ allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
-allow 2a00:1dc0:caff:68::9db3;
+allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
@@ -1281,7 +1278,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1656,7 +1652,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1667,6 +1662,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1722,6 +1718,7 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
+allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1789,7 +1786,6 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1854,6 +1850,7 @@ allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.100.235.29;
+allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1945,8 +1942,6 @@ allow 94.72.103.33;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
-allow 96.66.15.152;
 allow 98.128.173.33;
