--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,7 +116,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.216.214;
+allow 1.170.235.43;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -275,6 +275,7 @@ allow 185.113.128.30;
 allow 185.113.8.186;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.126.115.146;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -542,6 +543,7 @@ allow 185.40.4.38;
 allow 185.40.4.44;
 allow 185.40.4.64;
 allow 185.40.4.92;
+allow 185.42.12.136;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
@@ -1277,6 +1279,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1784,6 +1787,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1942,4 +1946,5 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.211.244.28;
 allow 95.216.107.148;
+allow 96.66.15.152;
 allow 98.128.173.33;
