--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -428,7 +428,6 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
-set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -715,6 +714,7 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:1467::;
+set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:35;
@@ -742,7 +742,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
-set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:133;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
@@ -757,8 +756,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
-set_real_ip_from 2a12:a800:2:1:45:141:215:88;
-set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:205;
