Update lists at 20250427-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -223,6 +223,7 @@ allow 2605:6400:d814:1d1::100;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:201:3100::35c5;
+allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
@@ -644,7 +645,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:8140:1fff:fe40::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
