--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -56,6 +56,7 @@ allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.1.228;
 allow 107.189.12.3;
+allow 107.189.12.7;
 allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.251;
@@ -116,7 +117,8 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.238.219;
+allow 1.168.171.212;
+allow 118.0.52.63;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -148,6 +150,7 @@ allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
+allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -159,7 +162,6 @@ allow 152.32.206.127;
 allow 152.32.218.34;
 allow 152.53.133.14;
 allow 152.53.53.243;
-allow 153.216.165.131;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
@@ -941,6 +943,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -1122,6 +1125,7 @@ allow 2605:6400:d814:1d1::100;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:201:3100::35c5;
+allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
@@ -1544,7 +1548,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:8140:1fff:fe40::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
@@ -1695,10 +1698,10 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.232.234;
 allow 45.137.99.10;
 allow 45.137.99.144;
 allow 45.137.99.216;
-allow 45.137.99.98;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
@@ -1963,7 +1966,6 @@ allow 94.72.103.33;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.211.244.28;
 allow 95.216.107.148;
 allow 96.66.15.152;
 allow 98.128.173.33;
