--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,7 +117,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.205.201;
+allow 114.41.22.57;
 allow 118.0.52.63;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -242,7 +242,6 @@ allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.35.0.216;
-allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
@@ -530,7 +529,6 @@ allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
-allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
@@ -957,7 +955,6 @@ allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.54.78;
 allow 216.239.90.19;
-allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
@@ -1304,6 +1301,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1314,7 +1312,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1673,7 +1670,6 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
-allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
 allow 31.220.75.237;
@@ -1721,7 +1717,6 @@ allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.133;
-allow 45.141.215.136;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
@@ -1741,7 +1736,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
-allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1809,6 +1803,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1965,6 +1960,7 @@ allow 94.72.103.33;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 96.66.15.152;
 allow 98.128.173.33;
