--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -117,14 +117,16 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 114.41.22.57;
+deny 1.170.237.139;
 deny 118.0.52.63;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
+deny 119.28.139.55;
 deny 121.78.28.166;
 deny 123.253.35.32;
 deny 123.58.200.119;
+deny 124.198.131.108;
 deny 125.212.241.131;
 deny 125.253.56.119;
 deny 128.127.180.156;
@@ -215,6 +217,7 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.148.133;
@@ -657,7 +660,6 @@ deny 194.15.112.133;
 deny 194.15.115.212;
 deny 194.163.157.49;
 deny 194.26.192.77;
-deny 194.53.137.156;
 deny 194.87.55.98;
 deny 195.160.220.104;
 deny 195.176.3.23;
@@ -1226,7 +1228,6 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1559,7 +1560,6 @@ deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1606,10 +1606,12 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::5138:4dfa;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
@@ -1671,7 +1673,6 @@ deny 2c0f:6c0:0:3::479d;
 deny 2c0f:6c0:0:4::95ea;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1682,6 +1683,7 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1692,6 +1694,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.135.232.234;
 deny 45.137.99.10;
 deny 45.137.99.144;
 deny 45.137.99.216;
@@ -1893,6 +1896,7 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
+deny 85.239.55.192;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1901,7 +1905,6 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
-deny 87.120.254.132;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
