--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,14 +117,16 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 114.41.22.57;
+allow 1.170.237.139;
 allow 118.0.52.63;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
+allow 119.28.139.55;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 123.58.200.119;
+allow 124.198.131.108;
 allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.127.180.156;
@@ -215,6 +217,7 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.133;
@@ -657,7 +660,6 @@ allow 194.15.112.133;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.26.192.77;
-allow 194.53.137.156;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -1226,7 +1228,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1559,7 +1560,6 @@ allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::50;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1606,10 +1606,12 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:10::5138:4dfa;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
@@ -1671,7 +1673,6 @@ allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1682,6 +1683,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1692,6 +1694,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.232.234;
 allow 45.137.99.10;
 allow 45.137.99.144;
 allow 45.137.99.216;
@@ -1893,6 +1896,7 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
+allow 85.239.55.192;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1901,7 +1905,6 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
