--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,7 +117,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.237.139;
+allow 114.41.24.90;
 allow 118.0.52.63;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -151,7 +151,6 @@ allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
-allow 147.45.116.145;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -216,6 +215,7 @@ allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -229,7 +229,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -661,7 +660,6 @@ allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.87.55.98;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -694,7 +692,6 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.62.158;
@@ -982,6 +979,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -992,6 +990,10 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1018,7 +1020,6 @@ allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
-allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
@@ -1044,7 +1045,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1297,7 +1297,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1343,6 +1342,7 @@ allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1607,7 +1607,6 @@ allow 2a10:1fc0:10::5138:4dfa;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
-allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
@@ -1628,7 +1627,6 @@ allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
-allow 2a12:a800:2:1:45:138:16:231;
 allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
@@ -1671,7 +1669,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.133.0.210;
 allow 31.184.236.104;
 allow 31.44.238.25;
-allow 34.28.104.198;
 allow 35.0.127.52;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1692,6 +1689,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.232.234;
 allow 45.137.99.10;
 allow 45.137.99.144;
 allow 45.137.99.216;
@@ -1701,7 +1699,6 @@ allow 45.138.16.164;
 allow 45.138.16.178;
 allow 45.138.16.222;
 allow 45.138.16.230;
-allow 45.138.16.231;
 allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.248;
@@ -1750,7 +1747,6 @@ allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.76.89.254;
 allow 45.78.44.215;
-allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
@@ -1803,7 +1799,6 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1886,10 +1881,10 @@ allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
-allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
+allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.239.55.192;
