Update lists at 20250428-1801

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -94,7 +94,6 @@ deny 107.189.8.5;
 deny 107.189.8.56;
 deny 107.189.8.65;
 deny 107.189.8.70;
-deny 108.181.115.198;
 deny 108.181.120.130;
 deny 108.59.12.3;
 deny 108.61.189.136;
@@ -117,7 +116,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 114.41.24.90;
+deny 1.168.166.211;
 deny 118.0.52.63;
 deny 118.163.74.160;
 deny 118.193.64.139;
@@ -241,9 +240,11 @@ deny 178.20.55.16;
 deny 178.20.55.182;
 deny 178.218.144.18;
 deny 178.218.144.51;
+deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
 deny 179.35.0.216;
+deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
 deny 179.43.159.196;
@@ -656,10 +657,12 @@ deny 193.32.162.96;
 deny 193.36.132.21;
 deny 193.56.135.103;
 deny 194.15.112.133;
+deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.157.49;
 deny 194.26.192.77;
 deny 194.87.55.98;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.47.238.176;
@@ -954,6 +957,7 @@ deny 212.73.134.204;
 deny 212.95.50.77;
 deny 212.95.54.78;
 deny 216.239.90.19;
+deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
 deny 217.199.199.250;
@@ -1225,6 +1229,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1570,6 +1575,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
+deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:13::67bc;
 deny 2a0e:bfc0:0:14::24a8;
@@ -1579,7 +1585,6 @@ deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
-deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
 deny 2a0f:85c1:356:5bdd::beef;
@@ -1603,10 +1608,58 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::19eb:717b;
+deny 2a10:1fc0:10::28fc:90d4;
+deny 2a10:1fc0:10::2a17:5b54;
+deny 2a10:1fc0:10::2cf4:6ba2;
+deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
+deny 2a10:1fc0:10::3919:de17;
+deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
+deny 2a10:1fc0:10::3eb3:d1d0;
+deny 2a10:1fc0:10::3ec1:2b1e;
+deny 2a10:1fc0:10::40d8:83c;
+deny 2a10:1fc0:10::42d2:f78b;
 deny 2a10:1fc0:10::5138:4dfa;
+deny 2a10:1fc0:10::5719:261d;
+deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::61e2:c84d;
+deny 2a10:1fc0:10::627f:3c31;
+deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
+deny 2a10:1fc0:10::6c2e:469a;
+deny 2a10:1fc0:10::6d92:d6ab;
+deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
+deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
+deny 2a10:1fc0:10::9a73:d4f2;
+deny 2a10:1fc0:10::9d80:c9f7;
+deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
+deny 2a10:1fc0:10::a458:8b37;
+deny 2a10:1fc0:10::a63c:724c;
+deny 2a10:1fc0:10::b571:1205;
+deny 2a10:1fc0:10::bf3f:d195;
+deny 2a10:1fc0:10::c129:61a1;
+deny 2a10:1fc0:10::c385:c7fa;
+deny 2a10:1fc0:10::c7c7:2f84;
+deny 2a10:1fc0:10::d5a6:a292;
+deny 2a10:1fc0:10::d5d0:db30;
+deny 2a10:1fc0:10::d6b7:b3e9;
+deny 2a10:1fc0:10::dbe0:6173;
+deny 2a10:1fc0:10::dbe9:7852;
+deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
+deny 2a10:1fc0:10::fa6c:cac5;
+deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
@@ -1627,6 +1680,7 @@ deny 2a12:a800:2:1:45:138:16:164;
 deny 2a12:a800:2:1:45:138:16:178;
 deny 2a12:a800:2:1:45:138:16:222;
 deny 2a12:a800:2:1:45:138:16:230;
+deny 2a12:a800:2:1:45:138:16:231;
 deny 2a12:a800:2:1:45:138:16:239;
 deny 2a12:a800:2:1:45:138:16:240;
 deny 2a12:a800:2:1:45:138:16:248;
@@ -1668,6 +1722,7 @@ deny 2c0f:6c0:0:3::479d;
 deny 2c0f:6c0:0:4::95ea;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1678,7 +1733,6 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1699,6 +1753,7 @@ deny 45.138.16.164;
 deny 45.138.16.178;
 deny 45.138.16.222;
 deny 45.138.16.230;
+deny 45.138.16.231;
 deny 45.138.16.239;
 deny 45.138.16.240;
 deny 45.138.16.248;
@@ -1752,6 +1807,7 @@ deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.80.158.36;
 deny 45.80.158.69;
+deny 45.80.158.97;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.84.107.101;
@@ -1769,7 +1825,6 @@ deny 45.84.107.55;
 deny 45.84.107.74;
 deny 45.84.107.76;
 deny 45.84.107.97;
-deny 45.9.148.50;
 deny 45.9.156.100;
 deny 45.9.156.101;
 deny 45.9.168.103;
@@ -1786,6 +1841,7 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.249.49.183;
 deny 46.30.188.218;
 deny 47.254.142.180;
 deny 47.89.193.230;
@@ -1887,7 +1943,30 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
+deny 85.239.55.11;
+deny 85.239.55.110;
+deny 85.239.55.112;
+deny 85.239.55.114;
+deny 85.239.55.123;
+deny 85.239.55.132;
+deny 85.239.55.168;
+deny 85.239.55.173;
+deny 85.239.55.174;
+deny 85.239.55.184;
+deny 85.239.55.189;
 deny 85.239.55.192;
+deny 85.239.55.201;
+deny 85.239.55.228;
+deny 85.239.55.230;
+deny 85.239.55.239;
+deny 85.239.55.24;
+deny 85.239.55.249;
+deny 85.239.55.25;
+deny 85.239.55.250;
+deny 85.239.55.31;
+deny 85.239.55.37;
+deny 85.239.55.51;
+deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1896,6 +1975,7 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.254.132;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
@@ -1926,6 +2006,30 @@ deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.227.114.153;
+deny 91.227.77.107;
+deny 91.227.77.108;
+deny 91.227.77.119;
+deny 91.227.77.125;
+deny 91.227.77.139;
+deny 91.227.77.158;
+deny 91.227.77.160;
+deny 91.227.77.181;
+deny 91.227.77.193;
+deny 91.227.77.200;
+deny 91.227.77.208;
+deny 91.227.77.209;
+deny 91.227.77.226;
+deny 91.227.77.229;
+deny 91.227.77.237;
+deny 91.227.77.25;
+deny 91.227.77.31;
+deny 91.227.77.36;
+deny 91.227.77.44;
+deny 91.227.77.48;
+deny 91.227.77.51;
+deny 91.227.77.54;
+deny 91.227.77.62;
+deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
