--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -117,7 +117,7 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.178.141.121;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.166.211;
+set_real_ip_from 1.170.243.36;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -274,7 +274,6 @@ set_real_ip_from 185.107.57.65;
 set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
-set_real_ip_from 185.112.146.168;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.113.8.186;
 set_real_ip_from 185.120.16.171;
@@ -528,6 +527,7 @@ set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
+set_real_ip_from 185.247.226.175;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
@@ -547,6 +547,7 @@ set_real_ip_from 185.40.4.38;
 set_real_ip_from 185.40.4.44;
 set_real_ip_from 185.40.4.64;
 set_real_ip_from 185.40.4.92;
+set_real_ip_from 185.42.12.136;
 set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
 set_real_ip_from 185.56.83.83;
@@ -1248,7 +1249,6 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1329,6 +1329,7 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
+set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1724,7 +1725,6 @@ set_real_ip_from 2c0f:6c0:0:3::479d;
 set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1735,6 +1735,7 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -2046,7 +2047,6 @@ set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
-set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
@@ -2061,7 +2061,6 @@ set_real_ip_from 94.72.103.33;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
-set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
 set_real_ip_from 96.66.15.152;
 set_real_ip_from 98.128.173.33;
