Update lists at 20250429-1801

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -117,7 +117,7 @@ deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.178.141.121;
 deny 114.35.245.150;
-deny 114.41.28.222;
+deny 1.170.217.122;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -151,7 +151,6 @@ deny 146.59.126.232;
 deny 146.59.231.4;
 deny 147.45.116.145;
 deny 148.113.152.91;
-deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
@@ -1010,6 +1009,7 @@ deny 23.191.200.9;
 deny 23.236.122.193;
 deny 23.94.211.25;
 deny 23.94.36.167;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
 deny 2400:8907::f03c:95ff:fe79:8c79;
@@ -1246,6 +1246,7 @@ deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:2b:75d::124:148;
@@ -1550,6 +1551,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:62f9::1;
 deny 2a0d:8140:1fff:fe40::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
@@ -1729,7 +1731,6 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1740,6 +1741,7 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1753,6 +1755,7 @@ deny 45.134.225.36;
 deny 45.137.99.10;
 deny 45.137.99.144;
 deny 45.137.99.216;
+deny 45.137.99.98;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.164;
@@ -1911,7 +1914,6 @@ deny 66.220.242.222;
 deny 66.78.40.182;
 deny 66.78.40.73;
 deny 67.219.109.141;
-deny 68.183.70.247;
 deny 71.19.144.106;
 deny 72.14.179.10;
 deny 72.18.215.82;
@@ -1923,6 +1925,7 @@ deny 77.81.247.72;
 deny 78.142.18.219;
 deny 78.159.131.96;
 deny 79.100.235.29;
+deny 79.127.129.160;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
