--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,7 +117,7 @@ allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.178.141.121;
 allow 114.35.245.150;
-allow 114.41.28.222;
+allow 1.170.217.122;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -151,7 +151,6 @@ allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
 allow 148.113.152.91;
-allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
@@ -1010,6 +1009,7 @@ allow 23.191.200.9;
 allow 23.236.122.193;
 allow 23.94.211.25;
 allow 23.94.36.167;
+allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
@@ -1246,6 +1246,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:99a0:0:1000::2;
+allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
@@ -1550,6 +1551,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:8140:1fff:fe40::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
@@ -1729,7 +1731,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1740,6 +1741,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1753,6 +1755,7 @@ allow 45.134.225.36;
 allow 45.137.99.10;
 allow 45.137.99.144;
 allow 45.137.99.216;
+allow 45.137.99.98;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
@@ -1911,7 +1914,6 @@ allow 66.220.242.222;
 allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
-allow 68.183.70.247;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.18.215.82;
@@ -1923,6 +1925,7 @@ allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.100.235.29;
+allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
