--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -352,7 +352,6 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
@@ -428,7 +427,6 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
-deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -648,6 +646,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:62f9::1;
 deny 2a0d:8140:1fff:fe40::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
@@ -795,7 +794,6 @@ deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
 deny 2a12:a800:2:1:45:141:215:133;
-deny 2a12:a800:2:1:45:141:215:136;
 deny 2a12:a800:2:1:45:141:215:167;
 deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
